[package]
name = "transaction_processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv-async = { version = "1.1.6", features = ["tokio"] }
rocksdb = "0.17"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.12", features = ["fs", "macros", "rt", "sync"] }
tokio-stream = "0.1.7"

[dev-dependencies]
tempfile = "3.2.0"

[features]
default = ["no_persist"]
no_persist = []
