[package]
name = "transaction_processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bincode = "1.3"
csv-async = { version = "1.1.6", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
sled = "0.34"
tokio = { version = "1.12", features = ["fs", "io-std", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.7"

[dev-dependencies]
tempfile = "3.2.0"

[features]
default = ["no_persist"]
no_persist = []
